--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mint-ui": "^2.2.13",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.2",
+    "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.13"
   }
