--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "mint-ui": "^2.2.13",
+    "moment": "^2.20.1",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.2",
     "vue-resource": "^1.3.5",
