--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.20.1",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.2",
+    "vue-preview": "^1.0.5",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.13"
